--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<!-- https://www.mkyong.com/java/how-do-convert-java-object-to-from-json-format-gson-api/ -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 </project>
