--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -1,2 +1,11 @@
 login=false
 gitRoot=/home/nowonbun/work
+
+rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
+rss_link=http://www.nowonbun.com
+rss_description=Test
+rss_language=ja
+rss_generator=nowonbun@gmail.com
+rss_managingEditor=nowonbun@gmail.com
+rss_webMaster=nowonbun@gmail.com
+rss_author=nowonbun@gmail.com
