--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -1,6 +1,6 @@
 login=false
 gitRoot=/home/nowonbun/work
-
+host_name=http://www.nowonbun.com
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_link=http://www.nowonbun.com
 rss_description=Test
@@ -9,3 +9,5 @@ rss_generator=nowonbun@gmail.com
 rss_managingEditor=nowonbun@gmail.com
 rss_webMaster=nowonbun@gmail.com
 rss_author=nowonbun@gmail.com
+sitemap_changefred=daily
+sitemap_priority=0.5
