--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -1,5 +1,6 @@
 login=false
 gitRoot=/home/nowonbun/work
+httpServer=/var/www/html
 host_name=http://www.nowonbun.com
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
