--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -3,10 +3,10 @@ email=
 login=false
 gitRoot=/home/nowonbun/git/BlogTest
 httpServer=/var/www/html
-host_name=http://www.nowonbun.com
+host_name=https://nowonbun.github.io/BlogTest
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
-rss_link=http://www.nowonbun.com
+rss_link=https://nowonbun.github.io/BlogTest
 rss_description=Test
 rss_language=ja
 rss_generator=nowonbun@gmail.com
