--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -15,3 +15,4 @@ rss_webMaster=nowonbun@gmail.com
 rss_author=nowonbun@gmail.com
 sitemap_changefred=daily
 sitemap_priority=0.5
+httpGroup=nowonbun
