--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -18,3 +18,4 @@ sitemap_priority=0.5
 httpGroup=nowonbun
 httpFilePermission=rw-r--r--
 httpDirPermisstion=rwxr-xr-x
+imageurl=https://www.nowonbun.com/img/nowonbun.png
