--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -19,3 +19,5 @@ httpGroup=nowonbun
 httpFilePermission=rw-r--r--
 httpDirPermisstion=rwxr-xr-x
 imageurl=https://www.nowonbun.com/img/nowonbun.png
+
+twitter=@nowonbun
