2019-09-03 The adsense was added, The font link was modified, The recently and same category list was added.

--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -1,9 +1,9 @@
 id=
 email=
 login=false
-gitRoot=/home/nowonbun/git/BlogTest
-httpServer=/var/www/html
-host_name=https://nowonbun.github.io/BlogTest
+gitRoot=D:/apache/htdocs
+httpServer=D:/apache/htdocs
+host_name=http://localhost
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_link=https://nowonbun.github.io/BlogTest
@@ -19,5 +19,5 @@ httpGroup=nowonbun
 httpFilePermission=rw-r--r--
 httpDirPermisstion=rwxr-xr-x
 imageurl=https://www.nowonbun.com/img/nowonbun.png
-
+categorycount=30
 twitter=@nowonbun
