--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -1,7 +1,7 @@
 id=
 email=
 login=false
-gitRoot=D:/apache/htdocs
+gitRoot=
 httpServer=D:/apache/htdocs
 host_name=http://localhost
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
@@ -21,3 +21,4 @@ httpDirPermisstion=rwxr-xr-x
 imageurl=https://www.nowonbun.com/img/nowonbun.png
 categorycount=30
 twitter=@nowonbun
+templatepath=D:/work/temp
