The mozibake was solved

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -69,5 +69,6 @@
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
     <url-pattern>*.ajax</url-pattern>
+    <url-pattern>*.html</url-pattern>
   </filter-mapping>
 </web-app>
