--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -7,7 +7,7 @@ host_name=http://localhost
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_link=https://nowonbun.github.io/BlogTest
-rss_description=Test
+rss_description=\u958B\u767A\u306F\u3044\u3064\u3082\u697D\u3057\u3044\u3002\u6700\u9AD8\u306E\u30C7\u30D9\u30ED\u30C3\u30D1\u30FC\u306B\u306A\u308B\u307E\u3067\u3002\u30D7\u30ED\u30B0\u30E9\u30E0\u5C02\u9580\u30D6\u30E9\u30B0\u3002
 rss_language=ja
 rss_generator=nowonbun@gmail.com
 rss_managingEditor=nowonbun@gmail.com
