The application ld json tag was updated

--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -22,3 +22,5 @@ imageurl=https://www.nowonbun.com/img/nowonbun.png
 categorycount=30
 twitter=@nowonbun
 templatepath=D:/work/temp
+image_width=783px
+image_height=657px
