--- a/src/main/resource/config.properties
+++ b/src/main/resource/config.properties
@@ -2,7 +2,7 @@ id=
 email=
 login=false
 gitRoot=
-httpServer=D:/apache/htdocs
+httpServer=D:/giteditor_temp
 host_name=http://localhost
 title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
 rss_title=\u660E\u6708\u306E\u958B\u767A\u30B9\u30C8\u30FC\u30EA
